# dp-lumen

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.specify/: feature.json  integration.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
components/: CMakeLists.txt
components/connectivity/: CMakeLists.txt  lora_config.h  lora_radio.c  lora_radio.h
components/diag/: CMakeLists.txt  uart_diag.c  uart_diag.h
components/domain/: CMakeLists.txt  battery_band.c  battery_band.h  button_policy.c  button_policy.h  luminaire_sm.c  luminaire_sm.h  telemetry.c  telemetry.h
components/drivers/: CMakeLists.txt  board_adc.c  board_adc.h  board_gpio.c  board_gpio.h  board_pins.h  debounce.c  debounce.h
components/platform/: CMakeLists.txt
components/platform/ra08h/: CMakeLists.txt  platform_init.c  platform_init.h  platform_sleep.c  platform_sleep.h  platform_tick.c  platform_tick.h  platform_uart.c  platform_uart.h
components/protocol/: CMakeLists.txt  telemetry_codec.c  telemetry_codec.h
main/: CMakeLists.txt  main.c
scripts/: boot-sync-test.py  build-ra08h-example.sh  flash-diagnose.sh  flash-dp-lumen-auto.sh  flash-dp-lumen-manual.sh  flash-dp-lumen.sh  patch-ai-thinker-sdk.sh  patch-tremo-loader.py  uart-probe.py  uart-wiring-test.py
sdk/ra08h-dp-lumen/: Makefile
specs/001-emergency-luminaire-firmware/: data-model.md  implementation-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-emergency-luminaire-firmware/checklists/: requirements.md
specs/001-emergency-luminaire-firmware/contracts/: telemetry-lora.md  uart-diagnostics.md
tests/unit/: CMakeLists.txt  test_battery_band.c  test_button_policy.c  test_luminaire_sm.c  test_telemetry_codec.c
